tests/ui/errors/misc_partial.stderr
error: expected value after =
 --> tests/ui/errors/misc_partial.rs:6:24
  |
6 |             span class=test
  |                        ^^^^
  |
  = help: you may have meant to wrap this in braces

error: unterminated element
 --> tests/ui/errors/misc_partial.rs:6:13
  |
6 |             span class=test
  |             ^^^^
  |
  = help: add a `;` to terminate the element with no children

error: unexpected end of input, expected a kebab-cased ident
  --> tests/ui/errors/misc_partial.rs:15:9
   |
15 |         }
   |         ^

error[E0277]: expected a `Fn()` closure, found `MissingValueAfterEq`
 --> tests/ui/errors/misc_partial.rs:6:24
  |
4 |       _ = mview! {
  |  _________-
5 | |         div class:x={true} {
6 | |             span class=test
  | |                        ^^^^ expected an `Fn()` closure, found `MissingValueAfterEq`
7 | |         }
8 | |     }
  | |_____- required by a bound introduced by this call
  |
  = help: the trait `std::ops::Fn<()>` is not implemented for `MissingValueAfterEq`
  = note: wrap the `MissingValueAfterEq` in a closure with no arguments: `|| { /* code */ }`
  = help: the following other types implement trait `IntoAttribute`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: required for `MissingValueAfterEq` to implement `IntoAttribute`
note: required by a bound in `leptos::HtmlElement::<El>::attr`
 --> $CARGO/leptos_dom-0.6.3/src/html.rs
  |
  |     pub fn attr(
  |            ---- required by a bound in this associated function
...
  |         attr: impl IntoAttribute,
  |                    ^^^^^^^^^^^^^ required by this bound in `HtmlElement::<El>::attr`
